tests/ui/asm/naked-functions-inline.stderr
error[E0736]: attribute incompatible with `#[unsafe(naked)]`
  --> $DIR/naked-functions-inline.rs:12:1
   |
LL | #[unsafe(naked)]
   | ---------------- function marked with `#[unsafe(naked)]` here
LL | #[inline]
   | ^^^^^^^^^ the `inline` attribute is incompatible with `#[unsafe(naked)]`

error[E0736]: attribute incompatible with `#[unsafe(naked)]`
  --> $DIR/naked-functions-inline.rs:19:1
   |
LL | #[unsafe(naked)]
   | ---------------- function marked with `#[unsafe(naked)]` here
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^ the `inline` attribute is incompatible with `#[unsafe(naked)]`

error[E0736]: attribute incompatible with `#[unsafe(naked)]`
  --> $DIR/naked-functions-inline.rs:26:1
   |
LL | #[unsafe(naked)]
   | ---------------- function marked with `#[unsafe(naked)]` here
LL | #[inline(never)]
   | ^^^^^^^^^^^^^^^^ the `inline` attribute is incompatible with `#[unsafe(naked)]`

error[E0736]: attribute incompatible with `#[unsafe(naked)]`
  --> $DIR/naked-functions-inline.rs:33:19
   |
LL | #[unsafe(naked)]
   | ---------------- function marked with `#[unsafe(naked)]` here
LL | #[cfg_attr(all(), inline(never))]
   |                   ^^^^^^^^^^^^^ the `inline` attribute is incompatible with `#[unsafe(naked)]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0736`.
